# bkstg

./: .gitignore  README.md  RELEASING.md  pyproject.toml
assets/: icon.icns
bkstg/: __init__.py  main.py
bkstg/config/: __init__.py  loader.py  models.py
bkstg/db/: __init__.py  graph_analysis.py  group_queries.py  history_queries.py  loader.py  queries.py  schema.py  score_queries.py
bkstg/git/: __init__.py  conflict_detector.py  github_fetcher.py  github_org_api.py  history_reader.py  history_writer.py  location_processor.py  pr_creator.py  reader.py  repo_manager.py  scanner.py  sync_manager.py  writer.py
bkstg/i18n/: __init__.py
bkstg/i18n/locales/: en.yaml  ja.yaml  ko.yaml  zh-Hans.yaml  zh-Hant.yaml
bkstg/models/: __init__.py  api.py  base.py  catalog.py  component.py  domain.py  group.py  history.py  location.py  resource.py  scorecard.py  system.py  user.py
bkstg/scorecard/: __init__.py  evaluator.py
bkstg/state/: __init__.py  catalog_state.py
bkstg/ui/: __init__.py  about_view.py  app.py  catalog_browser.py  dashboard.py  dependency_graph.py  entity_detail.py  entity_templates.py  form_editor.py  form_fields.py  github_org_picker.py  group_hierarchy.py  history_view.py  reference_picker.py  scorecard_settings.py  settings_view.py  sidebar.py  source_settings.py  sync_panel.py  welcome_view.py  yaml_editor.py
catalogs/locations/: external.yaml
catalogs/scorecards/: tech-health.yaml
docs/: github-sync-guide-ja.md  github-sync-guide.md  scorecard-operations-guide-en.md  scorecard-operations-guide.md
scripts/: generate_icon.py
