[project]
name = "bkstg"
version = "0.5.0"
description = "Mini IDP - A serverless Internal Developer Portal using local Git repository"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yasushi Itoh" }]
license = { text = "MIT" }
dependencies = [
    "castella[sdl3]>=0.13.8",
    "pyyaml",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/i2y/bkstg"
Repository = "https://github.com/i2y/bkstg"
Issues = "https://github.com/i2y/bkstg/issues"

[project.scripts]
bkstg = "bkstg.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ux-py>=0.1.3",
]

[tool.ux.macos]
icon = "assets/icon.icns"
bundle_identifier = "io.github.i2y.bkstg"
bundle_name = "bkstg"
